src/test/deca/context/invalid/provided/affect-incompatible.deca

// Resultats:
//Erreur contextuelle
//Ligne 12: Right value doesn't match the expected type


{
   int a;
   boolean b;

   // Doit etre refuse.
   a = b;
}
